salesforce-krnl/force-app/main/default/objects/Blockchain_Document__c/Blockchain_Document__c.object-meta.xml
<CustomObject>
    <label>Blockchain Document</label>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Blockchain Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blockchain Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>