salesforce-krnl/force-app/main/default/objects/Blockchain_Document__c/fields/Blockchain_Response__c.field-meta.xml
<CustomField>
    <fullName>Blockchain_Response__c</fullName>
    <label>Blockchain Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>