salesforce-krnl/force-app/main/default/objects/Blockchain_Document__c/fields/Blockchain_Status__c.field-meta.xml
<CustomField>
    <fullName>Blockchain_Status__c</fullName>
    <label>Blockchain Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Registration Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>