salesforce-krnl/force-app/main/default/objects/Blockchain_Document__c/fields/Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Document_ID__c</fullName>
    <label>Document ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>